[package]
name = "dogstatsd"
version = "0.6.2"
authors = ["Matt Casper <matthewvcasper@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A DogstatsD client for Rust."
documentation = "https://mcasper.github.io/dogstatsd-rs/dogstatsd/"
repository = "https://github.com/mcasper/dogstatsd-rs"
keywords = ["datadog", "dogstatsd", "client"]

[dependencies]
anyhow = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rand_distr = "0.4"

[features]
unstable = []
